src/styles/layout.scss
/* ... */
// ul {
//   margin-left: 1.45rem;
//   margin-right: 0;
//   margin-top: 0;
//   padding-bottom: 0;
//   padding-left: 0;
//   padding-right: 0;
//   padding-top: 0;
//   margin-bottom: 1.45rem;
//   // list-style-position: outside;
//   list-style-image: none;
// }
p {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
}
pre {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 1.45rem;
  font-size: 0.85rem;
  line-height: 1.5;
  background: hsla(0, 0%, 0%, 0.04);
  border-radius: 3px;
  overflow: auto;
  word-wrap: normal;
  padding: 1.5rem;
}

/* Reactime 14.0 CSS Edits */
// NavBar
.navBarContainer {
  z-index: 5;
  position: fixed;
  background-color: white;
  height: 4rem;
  width: 100vw;
  padding: 0 1.5rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid rgb(225, 225, 225);
  top: 0;
}
.name {
  padding-top: 1.5rem;
  font-size: 2rem;
  font-weight: 500;
  color: #487783;
}
.navBarIcon {
  color: #487783;
  font-weight: 500;
  font-size: large;
}
.navBarLeft {
  font-family: "Archivo";
  text-decoration: none;
}
.navBarRight {
  gap: .5rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  font-family: "Archivo";
}
.navBarLeft:hover {
  opacity: 0.75;
}
.github span {
  gap: 5px;
}
.github div {
  display: flex;
  align-items: center;
}
// "Splash"
.splash-container {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  // padding: 1rem;
  flex: 1;
  padding-bottom: 1em;
  padding-left: 15em;
  padding-right: 15em;
  
}
.splash-header{
  padding-left:5em;
  padding-right:5em;
  text-align: center;
}
.main-h1 {
  font-size: 2.5em;
  color: #2d2d2f;
  text-align: center;
  // color: #62D6FB;
}
.reactime-h1 {
  color: #2d2d2f;
}
.splash-info {
  text-align: center;
  transform: scale(0.9);

}
.splash-logo {
  display: flex;
  align-items: center;
  flex-direction: column;
  // padding-top: 1em;
  // padding-bottom: 1em;
  margin: auto;
  transform: scale(0.8);
}
// DescriptionContainer
#home-features {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 2rem;
  flex-wrap: wrap;
  flex: 1 0;
  padding-top: 4em;
  padding-bottom: 4em;
  padding-left: 15em;
  padding-right: 15em;
}
#feature-1 {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  padding: 1rem;
  flex: 1;
}
.first-icon {
  font-size: 100px !important;
  margin-bottom: 30px;
  width: 1em;
}
.second-icon {
  font-size: 100px !important;
  margin-bottom: 30px;
  width: 1em;
}
.third-icon {
  font-size: 100px !important;
  margin-bottom: 30px;
  width: 1em;
}
// GifFeatures
.container {
  display: grid;
  grid-template-columns: repeat(2, minmax(400px, 1fr));
  grid-gap: 3em;
  padding-top: 4em;
  padding-bottom: 2em;
  transform: scale(0.8);
}
.sectionContainer {
  display: flex;
  flex-direction: column;
  gap: 2em;
  justify-content: center;
  padding-right: 5em;
  padding-left: 1em;
  margin: auto;
}
.section {
  border: 1px solid lightgray;
  width: 50em;
  border-radius: .5rem;
  padding: 30px;
  cursor: pointer;
  h3, p {
    text-align: center;
    margin: 0;
  };
  p {
    margin-top: 5px;
    color: gray;
  }
}
.image {
  border-radius: .5rem;
  margin: auto;
}
.imageContainer {
  // padding-bottom: 3em;
  margin: auto;
}
// Terminal Container
.installationContainer {
  position: relative;
  margin: 0 2rem;
  display: grid;
  align-items: center;
  text-align: center;
  grid-gap: 6rem;
  grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
  padding: 4em 6em 4em 6em;
  transform: scale(0.8);
}
.terminal-window{
  padding-left: 8em;
  padding-right: 8em;
  // padding-top: 5em;
  // padding-bottom: 7em;
}
.terminal-header {
  align-items: center;
  text-align: left;
  justify-content: center;
  margin: 0;
  line-height: 1.5rem;
}
@media only screen and (max-width: 1000px) {
  .terminal-instructions {
    padding-left: 1em;
  }
}
.terminalContainer {
  min-height: 2rem !important;
  text-align: left;
  /* min-width: 25ch !important; */
}
.terminalContainer pre {
  background-color: inherit;
  margin: 0;
}
.typewriter {
  font-size: large;
  font-weight: 400;
}
.copy {
  position: absolute;
  top: 55px;
  right: 15px;
  cursor: pointer;
}
// Contributors Section
.TeamContainer {
  display: grid;
  transform: scale(0.8);
}
@media only screen and (max-width: 1000px) {
  .terminalContainer:first-child {
    grid-row: 2/2;
  }
  .terminalContainer:last-child {
    grid-row: 1/2;
  }
}
@media only screen and (max-width: 1000px) {
  .container {
    display: grid;
    grid-template-columns: 1fr;
  }
  .splash-container {
    display: grid;
    grid-template-columns: 1fr;
  }
  .TeamContainer {
    display: grid;
    grid-template-columns: 1fr;
  }
  .sectionContainer {
    padding-left: 10em;
    padding-right: 10em;
  }
  .imageContainer {
    display: flex;
    justify-content: center;
    padding-left: -5em;
  }
}
/* End of Reactime 14.0 EDITS */







// li {
//   margin-bottom: calc(1.45rem / 2);
// }
ol li {
  padding-left: 0;
}
// ul li {
//   padding-left: 0;
// }
// li > ol {
//   margin-left: 1.45rem;
//   margin-bottom: calc(1.45rem / 2);
//   margin-top: calc(1.45rem / 2);
// }
// li > ul {
//   margin-left: 1.45rem;
//   margin-bottom: calc(1.45rem / 2);
//   margin-top: calc(1.45rem / 2);
// }
blockquote *:last-child {
  margin-bottom: 0;
}
li *:last-child {
  margin-bottom: 0;
}
p *:last-child {
  margin-bottom: 0;
}
li > p {
  margin-bottom: calc(1.45rem / 2);
}
code {
  font-size: 1rem;
  line-height: 1.45rem;
}
/* ... */

